Release Notes for Beanmaker CLI
-------------------------------

v2.0 (2024-07-02)

- move from 1.0-SNAPSHOT to an actual version number
- the libraries are deployed on so many projects now that they cannot be considered alpha or beta anymore, plus we
  need versioning for projects that are moving at different speeds

V2.0.1 (2024-07-23)

- add removeFileExtension() to Files class
- update Version management

V2.1 (2024-08-01)

- introduce the possibility to initialize the database reference in DbBeans via an ad hoc class
- in package util, add methods to read resource files as a string or list of strings
- in package util, add Process utility class to manage execution of external processes
- in package util, add some new methods to create Date, Time and Timestamp objects
- remove custom logging framework

V2.2 (TBD)
- simplify data formatting by removing BeanFormatter, BeanFormatterBase, BeanFormatterInterface,
  BeanFormatterInterfaceBase and reengineer LocalDbBeanFormatter, FormattedBeanData and FormattedBeanDataBase
  to pick up the slack
- reengineer BeanParameter and BeanParameterBase to fully enforce the singleton approach (BeanParameter becomes
  an enum and BeanParameterBase is now an interface)
- fix a bug in SingleElements (runtime.dbutils) when retrieving elements in a DBTransaction
- fix a bug in code generation for labels that are not required: no per-language value should be reported as required
  if the field itself is not required