@@ -29,3 +29,6 @@ V2.2 (TBD)
 - fix a bug in SingleElements (runtime.dbutils) when retrieving elements in a DBTransaction
 - fix a bug in code generation for labels that are not required: no per-language value should be reported as required
   if the field itself is not required
+- fix a bug where an empty label was created for an optional label field instead of leaving the field empty; this fix
+  includes the addition of function cachedValuesExist() to DbBeanEditor interface that will need to be implemented by
+   client libraries/programs
